# MIMEAnTo

./: .gitignore  How2RunAndCompile.txt  README.md
ExampleData/: Barcodes_example.txt  Primerlength.txt  RefSeqExample.fas  RefSeqExample.txt
ExampleData/1d/: 1.txt  10.txt  11.txt  13.txt  14.txt  2.txt  4.txt  5.txt
PreprocessingScripts/: output_1d.py  output_2d.py  output_3d.py  processdata.py
executables/Windows/gnuplot/license/MinGW/: LicensingTerms.txt
executables/Windows/gnuplot/share/texmf/tex/generic/gnuplot/: gnuplot-lua-tikz-common.tex
executables/Windows/gnuplot/share/texmf/tex/latex/gnuplot/: gnuplot-lua-tikz.sty
source/: CMakeLists.txt  MIME.pro  MIMEAnTo_Icon.icns  button.cpp  datatablelineedit.cpp  datatablelineedit.h  icons.qrc  icons.rc  ioTools.cpp  ioTools.hpp  main.cpp  main_c.cpp  messages.cpp  messages.h  messages.hpp  mimeexception.cpp  mimeexception.h  mimeexception.hpp  mimemainwindow.cpp  mimemainwindow.h  mimemainwindow.hpp  mimemainwindow.ui  plot.cpp  plot.hpp  processing.cpp  processing.hpp  sampleactivationcheckbox.cpp  sampleactivationcheckbox.h  utils.cpp  utils.hpp
source/gnuplot-iostream/: gnuplot-iostream.h
